# drug-likeness

./: .gitignore  README.md  pyproject.toml  scoring.py  screening.py
scripts/: download_data.sh  evaluate.py  finetune.py
src/druglikeness/: __init__.py  data_utils.py  model.py
src/druglikeness/deepdl/: model.py
test/: chembl.smi
