[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "druglikeness"
authors = [{ name = "Seonghwan Seo", email = "shwan0106@gmail.com" }]
version = "0.2.0"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["rnn", "drug-likeness"]
requires-python = ">=3.9"
dependencies = ["torch>=1.13.0", "numpy", "rdkit", "omegaconf", "gdown", "tqdm"]

[project.optional-dependencies]
train = ["lightning", "wandb"]

[tool.ruff]
target-version = "py39"
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "B", "UP", "T203", "I"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
